--- a/css/styles.css
+++ b/css/styles.css
@@ -33,9 +33,10 @@ button {
 .nav-item,
 .address-item {
     font-size: 16px;
+    font-weight: 500;
     letter-spacing: 0.02em;
     line-height: 1.5;
-    color: #434455;
+    color: #2e2f42;
 }
 
 .nav-item:hover,
